@@ -4,6 +4,7 @@ edk2 (0~20160813.de74668f-2) UNRELEASED; urgency=medium
     booting in KVM mode. LP: #1632875.
   * debian/rules: Export compiler prefix variable to simplify
     build-qemu-efi target.
+  * debian/rules: Make the target dependencies on setup-build explicit.
 
  -- dann frazier <dannf@debian.org>  Wed, 19 Oct 2016 12:03:30 -0600
 
